[tool.poetry]
name = "meshmash"
version = "0.1.0"
description = "A Wireguard mesh network manager"
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
PyYAML = "*"
gunicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"
ipython = "*"
isort = "*"
mypy = "*"
pytest = "*"
types-PyYAML = "*"

[tool.mypy]
strict = true

# This is mostly for @pytest.fixture
disallow_untyped_decorators = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
